<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/think_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/think_toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Surface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:gravity="center"
                app:menu="@menu/menu_vertical_more"
                app:navigationIcon="@drawable/ic_baseline_navigate_before_24"
                app:title="1번째 생각"
                app:titleCentered="true" />

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/think_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@android:color/transparent"
            android:enabled="false"
            android:fontFamily="@font/notosans_kr_medium"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/think_appbar">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/think_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/notosans_kr_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/think_contents" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/think_divider"
            android:layout_width="0dp"
            android:layout_height="12dp"
            app:dividerColor="@color/about_grey2"
            app:layout_constraintBottom_toTopOf="@id/think_recyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/think_date" />

        <TextView
            android:id="@+id/think_empty_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_empty_comment"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/think_bottom_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/think_divider" />

        <TextView
            android:id="@+id/tv_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/think_divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/think_divider" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/think_divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            app:dividerColor="@color/about_grey2"
            app:layout_constraintBottom_toTopOf="@id/think_recyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comment_count" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/think_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/think_bottom_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/think_divider2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/think_bottom_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/about_grey1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/think_recyclerview">

            <EditText
                android:id="@+id/think_comment_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comment_input"
                android:imeOptions="actionSend"
                android:inputType="textCapSentences|textAutoCorrect"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/think_comment_input_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/think_comment_input_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:backgroundTint="@color/about_primary_color5"
                android:text="@string/button_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/think_comment_input"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
